--- a/main.html
+++ b/main.html
@@ -4,10 +4,31 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Dog Adoption</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Dog Breeds for Adoption</h1>
+
+    <!-- Unordered List -->
+    <ul>
+        <!-- List Item 1: Golden Retriever -->
+        <li>
+            <!-- Anchor Tag with Image Link -->
+            <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
+                <img src="img_link_for_golden_retriever" alt="Golden Retriever">
+            </a>
+        </li>
+
+        <!-- List Item 2: Poodle -->
+        <li>
+            <!-- Anchor Tag with Image Link -->
+            <a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">
+                <img src="img_link_for_poodle" alt="Poodle">
+            </a>
+        </li>
+    </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
